modules/mod-006-kubernetes-intro/exercise-06-ingress-loadbalancing/manifests/01-namespace.yaml
---
# Namespace for Ingress and Load Balancing exercises
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-demo
  labels:
    exercise: ingress-loadbalancing
    module: mod-006-kubernetes-intro
